CAMEL-23170: camel-core - Add simple jsonpath to Camels simple language for very basic jsonpath needs without learning jq/jsonpath lingo